...

    static func == (lhs: Station, rhs: Station) -> Bool {
        lhs.id == rhs.id
    }

    static let allStations: [Station] = [
        Station(id: "G03", name: "Addison Rd", colorImageName: "sb", lat: 38.886713, lon: -76.893592),
        Station(id: "F06", name: "Anacostia", colorImageName: "g", lat: 38.862073, lon: -76.995398),
        Station(id: "F02", name: "Archives", colorImageName: "gy", lat: 38.893675, lon: -77.021914),
        Station(id: "C06", name: "Arlington Cemetery", colorImageName: "b", lat: 38.884574, lon: -77.063108),
        Station(id: "N12", name: "Ashburn", colorImageName: "s", lat: 39.006612, lon: -77.489145),
        Station(id: "K04", name: "Ballston-MU", colorImageName: "os", lat: 38.882071, lon: -77.111845),
        Station(id: "G01", name: "Benning Rd", colorImageName: "sb", lat: 38.890488, lon: -76.938291),
...
        Station(id: "D12", name: "Landover", colorImageName: "os", lat: 38.934411, lon: -76.890988),
        Station(id: "G05", name: "Downtown Largo", colorImageName: "sb", lat: 38.9008, lon: -76.8449),
        Station(id: "N11", name: "Loudoun Gateway", colorImageName: "s", lat: 38.99204, lon: -77.460685),
        Station(id: "N01", name: "McLean", colorImageName: "s", lat: 38.924478, lon: -77.210167),
        Station(id: "C02", name: "McPherson Sq", colorImageName: "osb", lat: 38.901316, lon: -77.033652),
        Station(id: "A10", name: "Medical Center", colorImageName: "r", lat: 38.999947, lon: -77.097253),
        Station(id: "C01,A01", name: "Metro Center", colorImageName: "bors", lat: 38.898303, lon: -77.028099),
        Station(id: "D09", name: "Minnesota Av", colorImageName: "os", lat: 38.898284, lon: -76.948042),
        Station(id: "G04", name: "Morgan Blvd", colorImageName: "sb", lat: 38.8913, lon: -76.8682),
        Station(id: "E01", name: "Mt Vernon Sq", colorImageName: "gy", lat: 38.905604, lon: -77.022256),
        Station(id: "F05", name: "Navy Yard-Ballpark", colorImageName: "g", lat: 38.876588, lon: -77.005086),
        Station(id: "F09", name: "Naylor Rd", colorImageName: "g", lat: 38.851187, lon: -76.956565),
        Station(id: "D13", name: "New Carrollton", colorImageName: "o", lat: 38.947674, lon: -76.872144),
...
